--- a/css/second.css
+++ b/css/second.css
@@ -77,7 +77,7 @@ header .fa {
 }
 
 h2 {
-  font-size: 88px;
+  font-size: 75px;
   color: white;
   position: absolute;
   z-index: 1;
@@ -397,7 +397,10 @@ Graph
   overflow: hidden;
 }
 
-
+.bar8.animated {
+  animation: stagger .7s 1 ease-in-out;
+  animation-direction: alternate;
+}
 
 .bar7.animated {
   animation: stagger .8s 1 ease-in-out;
@@ -506,6 +509,11 @@ Graph
   max-width: 40%;
 }
 
+.bar8::after {
+  text-align: end;
+  content: '20%';
+  max-width: 20%;
+}
 
 /* --------------------------------------------------------------------------
      gallery
@@ -536,17 +544,17 @@ Graph
 }
 
 .type {
-  animation: slideUp 1.5s 1 ease-in-out;
+  animation: slideUp 1.3s 1 ease-in-out;
   animation-direction: alternate;
 }
 
 .menu {
-  animation: slideUp 1.7s 1 ease-in-out;
+  animation: slideUp 1.4s 1 ease-in-out;
   animation-direction: alternate;
 }
 
 .HTMLCSS {
-  animation: slideUp 1.9s 1 ease-in-out;
+  animation: slideUp 1.5s 1 ease-in-out;
   animation-direction: alternate;
 }
 
@@ -570,6 +578,7 @@ Graph
 
 .slider {
   transform: translateY(-100%);
+  /* or can use -100%*/
   transition: all .4s ease-in-out;
   overflow: hidden;
 }
@@ -745,6 +754,14 @@ input:focus {
   font-size: 15px;
 }
 
+.contact p {
+  font-size: 23px;
+  text-align: center;
+  width: 51%;
+  position: relative;
+  padding-bottom: 5%;
+}
+
 /* --------------------------------------------------------------------------
 
      footer
@@ -755,7 +772,6 @@ input:focus {
   max-width: 1000px;
   width: 100%;
   margin: 0 auto;
-
 }
 
 footer {
@@ -902,6 +918,10 @@ footer a {
     grid-template-columns: 1fr 1fr;
   }
 
+  .nav-wrapper {
+    max-height: 13%;
+  }
+
   .graph {
     width: 180%;
     margin-left: 4%;
@@ -920,7 +940,7 @@ footer a {
   .nav-wrapper,
   .main-nav,
   .social {
-    max-height: 12.4%;
+    max-height: 13%;
     padding: 0;
     max-width: 100%;
     justify-content: normal;
@@ -930,14 +950,10 @@ footer a {
     display: none;
   }
 
-  .social {
-    display: none;
-  }
-
   h4 {
     display: inline-block;
     position: relative;
-    left: 258%;
+    left: 273%;
   }
 
   h1 {
@@ -945,17 +961,18 @@ footer a {
   }
 
   h2 {
-    top: 214px;
+    top: 28%;
+    left: 30%;
   }
 
   .side-menu {
-    left: 0;
-    top: 41%;
+    left: 0%;
+    top: 47%;
     text-align: center;
   }
 
   .slide {
-    width: 296%;
+    width: 300%;
   }
 
   .about {
@@ -987,103 +1004,166 @@ footer a {
     width: 84%;
   }
 
-  @media screen and (max-width: 570px) {
-
-
-    .slide {
-      width: 230%;
-    }
-
-    h2 {
-      top: 24.6%;
-      left: 20%;
-    }
+  .social {
+    display: none;
   }
 
-  @media screen and (max-width: 500px) {
-    .modal-popup {
-      width: 100%;
-      z-index: 20;
-      top: 20%;
-      bottom: 20%;
-      left: 0%;
-    }
+  .bot {
+    display: block;
+  }
+}
 
-    header {
-      background-image: url('../img/mobiletest.jpg');
-    }
+@media screen and (max-width: 570px) {
 
-    .bot {
-      display: block;
-    }
+  .modal-popup {
+    width: 100%;
+    z-index: 20;
+    top: 20%;
+    bottom: 20%;
+    left: 0%;
+  }
 
-    .hamburger {
-      display: block;
-    }
+  .slide {
+    width: 245%;
+  }
 
-    h4 {
-      left: 85%;
-    }
+  h2 {
+    top: 29.6%;
+    left: 23%;
+  }
 
-    h3 {
-      padding-left: 12px;
-    }
+  h4 {
+    left: 178%;
+  }
 
-    h1 {
-      display: none;
-    }
+  .side-menu {
+    font-size: 55px;
+  }
 
-    h2 {
-      top: 177px;
-      left: 26px;
-      font-size: 78px
-    }
+  .contact {
+    left: 11%;
+  }
 
-    .side-menu {
-      left: -51%;
-      top: 41%;
-    }
+  .contact p {
+    left: -11%;
+    width: 100%;
+  }
 
-    .slide {
-      text-align: center;
-      width: 296%;
-    }
+  input[type=text],
+  select,
+  textarea {
+    width: 77%;
+  }
+}
 
-    .about {
-      display: inline-block;
-    }
+@media screen and (max-width: 500px) {
+  header {
+    background-image: url('../img/mobile.jpg');
+  }
 
-    .about img {
-      width: 60%;
-      right: -16.5%;
-    }
 
-    .one {
-      transform: translateX(-155%);
-    }
+  .bot {
+    display: block;
+  }
 
-    .two {
-      width: 83%;
-      text-align: center;
-      margin-top: 5%;
-      margin-left: 5%;
+  .hamburger {
+    display: block;
+  }
 
-    }
+  .nav-wrapper,
+  .main-nav,
+  .social {
+    justify-content: normal;
+  }
 
-    .slide-right {
-      transform: translateX(0);
-    }
+  .social {
+    display: none;
+  }
 
-    .graph {
-      width: 85%;
-    }
+  h4 {
+    left: 141%;
+  }
 
-    .contact {
-      left: 9%;
-    }
+  h1 {
+    display: none;
+  }
 
-    input[type=text],
-    select,
-    textarea {
-      width: 77%;
-    }
+  h2 {
+    top: 29%;
+    left: 20%;
+    font-size: 73px;
+  }
+
+  .side-menu {
+    left: -20%;
+    top: 45%;
+  }
+
+  .slide {
+    text-align: center;
+    width: 296%;
+  }
+
+  .about {
+    display: inline-block;
+  }
+
+  .about img {
+    width: 50%;
+    right: -22%;
+  }
+
+  .one {
+    transform: translateX(-155%);
+  }
+
+  .two {
+    width: 83%;
+    text-align: center;
+    margin-top: 5%;
+    margin-left: 5%;
+
+  }
+
+  .slide-right {
+    transform: translateX(0);
+  }
+
+  .graph {
+    width: 85%;
+  }
+
+}
+
+@media screen and (max-width: 375px) {
+  .modal-popup {
+    width: 100%;
+    z-index: 20;
+    top: 20%;
+    bottom: 20%;
+    left: 0%;
+  }
+
+  .side-menu {
+    left: -42%;
+    top: 44%;
+  }
+
+  h2 {
+    left: 9%;
+  }
+
+  h4 {
+    left: 85%;
+  }
+
+  h3 {
+    padding-left: 12px;
+  }
+
+  .about img {
+    width: 60%;
+    right: -16.5%;
+  }
+
+}
