--- a/css/second.css
+++ b/css/second.css
@@ -77,7 +77,7 @@ header .fa {
 }
 
 h2 {
-  font-size: 75px;
+  font-size: 88px;
   color: white;
   position: absolute;
   z-index: 1;
@@ -139,12 +139,18 @@ nav a,
   background-color: #89cfe1;
   z-index: 31;
   position: fixed;
-  width: 100%;
-  display: none;
+  width: 50%;
   padding-bottom: 9%;
   top: 0;
   left: 0;
   height: 100%;
+  transform: translateX(-100%);
+  transition: all .3s ease-in-out;
+}
+
+.active {
+  transform: translateX(0);
+  transition: all .3s ease-in-out;
 }
 
 .fa-times {
@@ -152,9 +158,9 @@ nav a,
 }
 
 .side-nav .close {
-  padding-left: 4%;
-  padding-bottom: 3%;
-  padding-top: 4%;
+  padding-top: 4.5%;
+  left: 87%;
+  position: relative;
 }
 
 .side-nav a {
@@ -246,11 +252,18 @@ Hamburger nav
   transition: all .3s ease-in-out;
 }
 
-.line {
+.hamburger div {
   border-bottom: 4px solid #2b5c83;
   width: 35px;
   margin-bottom: 6px;
 }
+
+.line:hover {
+  border-bottom: 4px solid white;
+  width: 35px;
+  margin-bottom: 6px;
+}
+
 
 /* ---------------------
 Side Menu
@@ -397,10 +410,7 @@ Graph
   overflow: hidden;
 }
 
-.bar8.animated {
-  animation: stagger .7s 1 ease-in-out;
-  animation-direction: alternate;
-}
+
 
 .bar7.animated {
   animation: stagger .8s 1 ease-in-out;
@@ -528,7 +538,7 @@ Graph
   margin: 5%;
   text-align: center;
   opacity: 0;
-  transform: skew(-16deg, 0);
+  /* transform: skew(-16deg, 0); */
 }
 
 .portfolio {
@@ -578,7 +588,6 @@ Graph
 
 .slider {
   transform: translateY(-100%);
-  /* or can use -100%*/
   transition: all .4s ease-in-out;
   overflow: hidden;
 }
@@ -613,7 +622,7 @@ Graph
 }
 
 .title {
-  margin: 3%;
+  margin: 7%;
 }
 
 /* --------------------------------------------------------------------------
@@ -639,12 +648,26 @@ Graph
   width: 50%;
   height: 60%;
   z-index: 20;
-  top: 20%;
+  top: 12%;
   bottom: 20%;
   left: 25%;
   right: 20%;
   display: none;
   max-width: 100%;
+}
+
+.modal-text {
+  position: fixed;
+  width: 50%;
+  height: 19%;
+  z-index: 20;
+  top: 72%;
+  bottom: 20%;
+  left: 25%;
+  right: 20%;
+  display: none;
+  max-width: 100%;
+  background-color: white;
 }
 
 .CSS img {
@@ -693,6 +716,10 @@ Graph
   font-size: 40px;
   z-index: 21;
   cursor: pointer;
+}
+
+.swiper-wrapper p {
+  margin: 4%;
 }
 
 
@@ -881,6 +908,16 @@ footer a {
   }
 }
 
+@keyframes sideNav {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(100%);
+  }
+}
+
 
 /* --------------------------------------------------------------------------
      Media queries
@@ -892,7 +929,7 @@ footer a {
 
   .nav-wrapper,
   .main-nav {
-    max-height: 12%;
+    max-height: 14%;
     padding: 0;
     max-width: 100%;
   }
@@ -918,10 +955,6 @@ footer a {
     grid-template-columns: 1fr 1fr;
   }
 
-  .nav-wrapper {
-    max-height: 13%;
-  }
-
   .graph {
     width: 180%;
     margin-left: 4%;
@@ -940,7 +973,6 @@ footer a {
   .nav-wrapper,
   .main-nav,
   .social {
-    max-height: 13%;
     padding: 0;
     max-width: 100%;
     justify-content: normal;
@@ -961,18 +993,19 @@ footer a {
   }
 
   h2 {
-    top: 28%;
-    left: 30%;
+    top: 27%;
+    left: 27%;
   }
 
   .side-menu {
-    left: 0%;
-    top: 47%;
+    left: -6%;
+    top: 49%;
+    font-size: 50px;
     text-align: center;
   }
 
   .slide {
-    width: 300%;
+    width: 393%;
   }
 
   .about {
@@ -1054,6 +1087,14 @@ footer a {
   textarea {
     width: 77%;
   }
+
+  .side-nav {
+    width: 100%;
+  }
+
+  .side-nav .close {
+    left: 80%;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -1069,6 +1110,7 @@ footer a {
   .hamburger {
     display: block;
   }
+
 
   .nav-wrapper,
   .main-nav,
@@ -1165,5 +1207,6 @@ footer a {
     width: 60%;
     right: -16.5%;
   }
+
 
 }
