--- a/css/second.css
+++ b/css/second.css
@@ -13,14 +13,18 @@
 @-webkit-keyframes text-focus-in {
   0% {
     -webkit-filter: blur(12px);
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="12" /></filter></svg>#filter');
     filter: blur(12px);
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   }
 
   100% {
     -webkit-filter: blur(0px);
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="0" /></filter></svg>#filter');
     filter: blur(0px);
     opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   }
 }
 
@@ -122,6 +126,7 @@ h2 {
 header nav a:hover,
 header .fa:hover {
   color: white;
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
@@ -131,7 +136,12 @@ nav a,
   text-decoration: none;
   color: #2b5c83;
   font-size: 30px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -ms-grid-row-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -144,12 +154,16 @@ nav a,
   top: 0;
   left: 0;
   height: 100%;
+  -webkit-transform: translateX(-100%);
   transform: translateX(-100%);
+  -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
 .active {
+  -webkit-transform: translateX(0);
   transform: translateX(0);
+  -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -165,17 +179,35 @@ nav a,
 
 .side-nav a {
   top: 20%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   line-height: 3;
 }
 
 .side-social {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   top: 24%;
@@ -196,6 +228,7 @@ nav a,
 
 .social i:hover,
 nav a:hover {
+  -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   color: white;
 }
@@ -209,18 +242,30 @@ nav a:hover {
   width: 100%;
   z-index: 20;
   background-color: #89cfe1;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding-left: 88px;
   padding-right: 88px;
+  -webkit-animation: navigation .8s 1 linear;
   animation: navigation .8s 1 linear;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 h1,
 h4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   font-size: 60px;
   margin: 0;
@@ -249,6 +294,7 @@ Hamburger nav
   padding-left: 20px;
   display: none;
   cursor: pointer;
+  -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
@@ -289,18 +335,17 @@ Side Menu
   overflow: visible;
   display: block;
   margin: 0 auto;
+  background-image: -webkit-linear-gradient(left, #fff 50%, #619ac5 50%);
   background-image: linear-gradient(to right, #fff 50%, #619ac5 50%);
   background-size: 200% 100%;
   background-repeat: no-repeat;
   -webkit-transition: all 0.25s ease-in;
-  -moz-transition: all 0.25s ease-in;
   transition: all 0.25s ease-in;
 
 }
 
 .slide:hover {
   -webkit-transition: all 0.25s ease-in;
-  -moz-transition: all 0.25s ease-in;
   transition: all 0.25s ease-in;
   /** START THE FINAL STATE STYLING **/
   background-position: bottom right;
@@ -321,7 +366,9 @@ h3 {
 }
 
 .about {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr 2fr;
   grid-template-columns: 1fr 1fr 2fr;
   grid-gap: 20px;
   width: 99%;
@@ -333,54 +380,74 @@ h3 {
 .two,
 .graph,
 .about {
+  -ms-flex-item-align: center;
   align-self: center;
 }
 
 
 .one {
+  -webkit-transform: translateX(-104%);
   transform: translateX(-104%);
+  -webkit-transition: all 1.5s ease-in-out;
   transition: all 1.5s ease-in-out;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   position: relative;
   right: 5%;
   -webkit-filter: blur(10px);
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="10" /></filter></svg>#filter');
   filter: blur(10px);
 }
 
 .two {
+  -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
   overflow: hidden;
   overflow-y: hidden;
+  -webkit-transition: all 1.5s ease-in-out;
   transition: all 1.5s ease-in-out;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 }
 
 
 .graph {
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  -webkit-transform: translateX(200%);
   transform: translateX(200%);
+  -webkit-animation: text-focus-in 1.5s 1 linear;
   animation: text-focus-in 1.5s 1 linear;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 
 .slide-right {
+  -webkit-transform: translateX(0);
   transform: translateX(0);
   opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   -webkit-filter: blur(0px);
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="0" /></filter></svg>#filter');
   filter: blur(0px);
 }
 
 .slideDown {
+  -webkit-transform: translateY(0);
   transform: translateY(0);
   opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   overflow: hidden;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .slide-left {
+  -webkit-transform: translateX(0);
   transform: translateX(0);
   opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
 
 ul {
@@ -414,42 +481,56 @@ Graph
 
 
 .bar7.animated {
+  -webkit-animation: stagger .8s 1 ease-in-out;
   animation: stagger .8s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .bar6.animated {
+  -webkit-animation: stagger .9s 1 ease-in-out;
   animation: stagger .9s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .bar5.animated {
+  -webkit-animation: stagger 1s 1 ease-in-out;
   animation: stagger 1s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .bar4.animated {
+  -webkit-animation: stagger 1.1s 1 ease-in-out;
   animation: stagger 1.1s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .bar3.animated {
+  -webkit-animation: stagger 1.2s 1 ease-in-out;
   animation: stagger 1.2s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .bar2.animated {
+  -webkit-animation: stagger 1.3s 1 ease-in-out;
   animation: stagger 1.3s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .bar1.animated {
+  -webkit-animation: stagger 1.5s 1 ease-in-out;
   animation: stagger 1.5s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 
-.bar::before {
+.bar:before {
   content: '';
   width: 100%;
   position: absolute;
@@ -461,10 +542,11 @@ Graph
   color: #a8ddeb;
 }
 
-.bar::after {
+.bar:after {
   content: '';
   background: #a8ddeb;
   height: 30px;
+  -webkit-transition: 1.4s;
   transition: 1.4s;
   display: block;
   width: 100%;
@@ -476,7 +558,7 @@ Graph
 }
 
 
-.bar1::after {
+.bar1:after {
   content: '80%';
   text-align: end;
   max-width: 80%;
@@ -484,43 +566,43 @@ Graph
 }
 
 
-.bar2::after {
+.bar2:after {
   text-align: end;
   content: '80%';
   max-width: 80%;
 }
 
-.bar3::after {
+.bar3:after {
   text-align: end;
   content: '50%';
   max-width: 50%;
 }
 
-.bar4::after {
+.bar4:after {
   text-align: end;
   content: '50%';
   max-width: 50%;
 }
 
-.bar5::after {
+.bar5:after {
   text-align: end;
   content: '70%';
   max-width: 70%;
 }
 
-.bar6::after {
+.bar6:after {
   text-align: end;
   content: '50%';
   max-width: 50%;
 }
 
-.bar7::after {
+.bar7:after {
   text-align: end;
   content: '40%';
   max-width: 40%;
 }
 
-.bar8::after {
+.bar8:after {
   text-align: end;
   content: '20%';
   max-width: 20%;
@@ -532,13 +614,21 @@ Graph
 .gallery {
   position: relative;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin: 5%;
   text-align: center;
   opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   /* transform: skew(-16deg, 0); */
 }
 
@@ -551,26 +641,36 @@ Graph
 .overlay-wrapper-sliding {
   position: relative;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .type {
+  -webkit-animation: slideUp 1.3s 1 ease-in-out;
   animation: slideUp 1.3s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .menu {
+  -webkit-animation: slideUp 1.4s 1 ease-in-out;
   animation: slideUp 1.4s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .HTMLCSS {
+  -webkit-animation: slideUp 1.5s 1 ease-in-out;
   animation: slideUp 1.5s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
 .photoss {
+  -webkit-animation: slideUp 2s 1 ease-in-out;
   animation: slideUp 2s 1 ease-in-out;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
 }
 
@@ -584,17 +684,23 @@ Graph
 
 .overlay:hover {
   opacity: .9;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
 }
 
 .slider {
+  -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
+  -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
   overflow: hidden;
 }
 
 .overlay-wrapper-sliding:hover .slider {
+  -webkit-transform: translateX(0px);
   transform: translateX(0px);
+  -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
 }
 
@@ -634,6 +740,7 @@ Graph
   position: fixed;
   background-color: black;
   opacity: .3;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
   top: 0;
   bottom: 0;
   left: 0;
@@ -687,15 +794,12 @@ Graph
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  -webkit-align-items: center;
   align-items: center;
 }
 
@@ -761,6 +865,7 @@ input[type=submit]:hover {
 input:focus {
   background-color: #DCDCDC;
   opacity: .5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 }
 
 /* Add a background color and some padding around the form */
@@ -831,8 +936,10 @@ footer a {
 }
 
 .fa-arrow-up {
+  -webkit-animation: hvr-icon-up .7s infinite;
   animation: hvr-icon-up .7s infinite;
   font-size: 35px;
+  -webkit-animation-direction: alternate;
   animation-direction: alternate;
   cursor: pointer;
 }
@@ -840,6 +947,22 @@ footer a {
 /* --------------------------------------------------------------------------
           Keyframes
 ----------------------------------------------------------------------------- */
+
+@-webkit-keyframes hvr-icon-up {
+
+  0%,
+  50%,
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  25%,
+  75% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+}
 
 @keyframes hvr-icon-up {
 
@@ -857,15 +980,37 @@ footer a {
   }
 }
 
-@keyframes navigation {
+@-webkit-keyframes navigation {
 
   0% {
+    -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
+    -webkit-transition: ease-in-out;
     transition: ease-in-out;
   }
 
   100% {
+    -webkit-transform: translateY(0);
     transform: translateY(0);
+    -webkit-transition: cubic-bezier(0.22, 0.61, 0.36, 1);
+    transition: cubic-bezier(0.22, 0.61, 0.36, 1);
+  }
+
+}
+
+@keyframes navigation {
+
+  0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    -webkit-transition: ease-in-out;
+    transition: ease-in-out;
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-transition: cubic-bezier(0.22, 0.61, 0.36, 1);
     transition: cubic-bezier(0.22, 0.61, 0.36, 1);
   }
 
@@ -874,47 +1019,101 @@ footer a {
 @keyframes text-focus-in {
   0% {
     -webkit-filter: blur(12px);
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="12" /></filter></svg>#filter');
     filter: blur(12px);
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   }
 
   100% {
     -webkit-filter: blur(0px);
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="0" /></filter></svg>#filter');
     filter: blur(0px);
     opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  }
+}
+
+@-webkit-keyframes stagger {
+  0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%)
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0)
   }
 }
 
 @keyframes stagger {
   0% {
+    -webkit-transform: translateX(100%);
     transform: translateX(100%)
   }
 
   100% {
+    -webkit-transform: translateX(0);
     transform: translateX(0)
+  }
+}
+
+
+@-webkit-keyframes slideUp {
+  0% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  }
+
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+
   }
 }
 
 
 @keyframes slideUp {
   0% {
+    -webkit-transform: translateY(100%);
     transform: translateY(100%);
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   }
 
   100% {
+    -webkit-transform: translateY(0);
     transform: translateY(0);
     opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 
+  }
+}
+
+@-webkit-keyframes sideNav {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+
+  100% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
   }
 }
 
 @keyframes sideNav {
   0% {
+    -webkit-transform: translateX(0);
     transform: translateX(0);
   }
 
   100% {
+    -webkit-transform: translateX(100%);
     transform: translateX(100%);
   }
 }
@@ -953,6 +1152,7 @@ footer a {
 
 @media screen and (max-width: 830px) {
   .about {
+    -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
   }
 
@@ -968,6 +1168,7 @@ footer a {
 
 @media screen and (max-width: 768px) {
   .gallery {
+    -webkit-transform: none;
     transform: none;
   }
 
@@ -976,6 +1177,8 @@ footer a {
   .social {
     padding: 0;
     max-width: 100%;
+    -webkit-box-pack: normal;
+    -ms-flex-pack: normal;
     justify-content: normal;
   }
 
@@ -1019,6 +1222,7 @@ footer a {
   }
 
   .one {
+    -webkit-transform: translateX(-155%);
     transform: translateX(-155%);
   }
 
@@ -1031,6 +1235,7 @@ footer a {
   }
 
   .slide-right {
+    -webkit-transform: translateX(0);
     transform: translateX(0);
   }
 
@@ -1116,6 +1321,8 @@ footer a {
   .nav-wrapper,
   .main-nav,
   .social {
+    -webkit-box-pack: normal;
+    -ms-flex-pack: normal;
     justify-content: normal;
   }
 
@@ -1157,6 +1364,7 @@ footer a {
   }
 
   .one {
+    -webkit-transform: translateX(-155%);
     transform: translateX(-155%);
   }
 
@@ -1169,6 +1377,7 @@ footer a {
   }
 
   .slide-right {
+    -webkit-transform: translateX(0);
     transform: translateX(0);
   }
 
@@ -1207,6 +1416,10 @@ footer a {
   .about img {
     width: 60%;
     right: -16.5%;
+  }
+
+  .bot {
+    display: block;
   }
 
 
