--- a/css/second.css
+++ b/css/second.css
@@ -48,6 +48,10 @@ Base styles:
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 
@@ -62,6 +66,9 @@ body {
   max-width: 100%;
   overflow-x: hidden;
   width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* ---------------------
